--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+.flex {
+  display: flex;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -160,6 +163,30 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.navigation-bar {
+  background-color: #F6F6F6;
+  border: 1px solid #F1F1F1;
+  color: #454A59;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.navigation-bar h1 {
+  font-size: 4rem;
+  margin: 20px 0;
+}
+.navigation-bar nav {
+  display: flex;
+  width: 30%;
+  justify-content: space-between;
+  padding-bottom: 20px;
+}
+.navigation-bar nav a {
+  text-decoration: none;
+  color: #454A59;
+  font-size: 1.8rem;
+  font-weight: 700;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -175,6 +202,9 @@ footer {
 }
 .home .intro p {
   padding: 0 15px;
+}
+.home .intro img {
+  border-radius: 5px;
 }
 .home .space-images {
   display: flex;
