--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,26 @@
 // Navigation code here
+.navigation-bar{
+    background-color: @nav-bg;
+    border: 1px solid @nav-border;
+    color: @nav-font;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h1{
+        font-size: 4rem;
+        margin: 20px 0;
+    }
+    nav{
+        .flex();
+        width: 30%;
+        justify-content: space-between;
+        padding-bottom: 20px;
+        
+        a{
+            text-decoration: none;
+            color: @nav-font;
+            font-size: 1.8rem;
+            font-weight: 700;
+        }
+    }
+}
