--- a/less/home-page.less
+++ b/less/home-page.less
@@ -62,6 +62,13 @@
       }
 
       .btn {
+        .btn(center, center);
+        .heavy-font();
+        color: white;
+        background-color: @button-bg;
+        padding: 10px 15px 10px 15px;
+        width: 30%;
+        border-radius: 5px;
       }
     }
 
