--- a/less/navigation.less
+++ b/less/navigation.less
@@ -15,12 +15,10 @@
         width: 30%;
         justify-content: space-between;
         padding-bottom: 20px;
-        
+
         a{
             text-decoration: none;
-            color: @nav-font;
-            font-size: 1.8rem;
-            font-weight: 700;
+            .heavy-font();
         }
     }
 }
