--- a/less/variables.less
+++ b/less/variables.less
@@ -12,6 +12,8 @@
 @footer-background: @wild-sand;
 @footer-font-color: @waterloo;
 
+@button-bg: #22283A;
+
 // Color Vars
 @wild-sand: #F6F6F6;
 @river-bend: #454A59;
