added button hover animation

--- a/css/index.css
+++ b/css/index.css
@@ -251,6 +251,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 1px solid white;
   color: #454A59;
   font-size: 1.8rem;
   font-weight: 700;
@@ -259,6 +260,13 @@ footer {
   padding: 10px 15px 10px 15px;
   width: 30%;
   border-radius: 5px;
+}
+.home .walk .walk-text .btn:hover {
+  background-color: white;
+  color: #22283A;
+  cursor: pointer;
+  border: 1px solid #22283A;
+  transition: 0.4s;
 }
 .home .walk .walk-img {
   width: 46%;
