--- a/css/index.css
+++ b/css/index.css
@@ -170,11 +170,20 @@ p {
 }
 .navigation-bar {
   background-color: #F6F6F6;
+  opacity: 0.9;
   border: 1px solid #F1F1F1;
   color: #454A59;
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+@media (max-width: 500px) {
+  .navigation-bar {
+    width: 100vw;
+  }
 }
 .navigation-bar h1 {
   font-size: 4rem;
@@ -182,9 +191,15 @@ p {
 }
 .navigation-bar nav {
   display: flex;
-  width: 30%;
+  width: 500px;
   justify-content: space-between;
   padding-bottom: 20px;
+}
+@media (max-width: 500px) {
+  .navigation-bar nav {
+    width: 80%;
+    padding-bottom: 10px;
+  }
 }
 .navigation-bar nav a {
   text-decoration: none;
@@ -210,17 +225,38 @@ footer {
 }
 .home .intro img {
   border-radius: 5px;
+  margin-top: 130px;
+}
+@media (max-width: 500px) {
+  .home .intro img {
+    margin-top: 110px;
+    width: 100vw;
+  }
 }
 .home .space-images {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 90%;
+    margin: 20px auto;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -247,6 +283,11 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
+}
 .home .walk .walk-text .btn {
   display: flex;
   justify-content: center;
@@ -268,12 +309,34 @@ footer {
   border: 1px solid #22283A;
   transition: 0.4s;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 20px 0;
+    margin-bottom: 20px;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 20px 0 20px 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    align-items: center;
+    padding: 0 0;
+    width: 90%;
+    margin: 0 auto;
+  }
 }
