--- a/less/home-page.less
+++ b/less/home-page.less
@@ -14,6 +14,12 @@
 
     img{
       border-radius: 5px;
+      margin-top: 130px;
+
+      @media @phone {
+        margin-top:110px;
+        width: 100vw;
+      }
     }
   
   }
@@ -22,12 +28,24 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    @media @phone {
+      .sky{
+        display: none;
+      }
+      .launch{
+        display: none;
+      }
+    }
 
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone {
+      width: 90%;
+      margin: 20px auto;
+      }
     }
   }
 
@@ -61,6 +79,10 @@
         margin-bottom: 26px;
       }
 
+      @media @phone {
+        width: 100%;
+      }
+
       .btn {
         .btn(center, center);
         .heavy-font();
@@ -69,18 +91,35 @@
         padding: 10px 15px 10px 15px;
         width: 30%;
         border-radius: 5px;
+        
+        @media @phone{
+          width: 100%;
+          padding: 20px 0;
+          margin-bottom: 20px;
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width: 100%;
+        margin: 20px 0 20px 0;
+      }
       
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
       }
+    }
+    @media @phone {
+      flex-direction: column-reverse;
+      align-items: center;
+      padding: 0 0;
+      width: 90%;
+      margin: 0 auto;
     }
   }
 }// home
